PPRO-mise en page du background et du tittre

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -39,6 +39,10 @@ video {
   vertical-align: middle;
 }
 
+body {
+  background-image: url(/src/img/autre-siteweb/fond-img.png);
+}
+
 /* ====================================
 // base rules
 // ==================================== */
