PPRO-texte histoire et commencement de la bière blonde

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -124,6 +124,16 @@ nav {
   margin-right: 250px;
   color: white;
   padding-top: 20px;
+  padding-bottom: 35px;
+}
+
+.beers-blonde {
+  background-image: url(/src/img/autre-siteweb/fond-blonde.png);
+  padding: 50px;
+}
+
+h3 {
+  color: white;
 }
 
 /* ====================================
