PPRO-classement des scss celon leur cathegorie et developpement de la partie bière blonde

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,6 @@
 @import "layout";
 @import "modules/example";
 @import "modules/history";
+@import "modules/beers";
+@import "modules/mini";
+@import "modules/other";
