--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -64,44 +64,6 @@ nav {
   display: flex;
   justify-content: center;
 }
-.mini-logo-mermaid {
-  width: 200px;
-  margin-top: 140px;
-  transition-duration: 0.3s;
-}
-
-.mini-logo-pirate {
-  width: 220px;
-  margin-top: 140px;
-  transition-duration: 0.3s;
-}
-
-.mini-logo-kraken {
-  width: 270px;
-  margin-top: 140px;
-  transition-duration: 0.3s;
-}
-
-.mini-logo-mermaid:hover {
-  width: 250px;
-}
-
-.mini-logo-pirate:hover {
-  width: 250px;
-}
-
-.mini-logo-kraken:hover {
-  width: 300px;
-}
-
-.other-nav {
-  margin-top: 70px;
-  transition-duration: 0.3s;
-}
-
-.other-nav:hover {
-  color: #f4aa1f;
-}
 
 .alcool {
   display: flex;
@@ -110,30 +72,21 @@ nav {
   padding-top: 100px;
 }
 
-.history-title {
-  display: flex;
-  justify-content: center;
-  color: white;
-  padding-top: 35px;
-}
-
-.history {
-  display: flex;
-  text-align: left;
-  margin-left: 250px;
-  margin-right: 250px;
-  color: white;
-  padding-top: 20px;
-  padding-bottom: 35px;
-}
-
-.beers-blonde {
-  background-image: url(/src/img/autre-siteweb/fond-blonde.png);
-  padding: 50px;
+.btn {
+  border-radius: 5px;
+  width: fit-content;
 }
 
 h3 {
-  color: white;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  color: #df03f2;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: "Goblin One";
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 /* ====================================
