--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -89,6 +89,29 @@ h3 {
   line-height: normal;
 }
 
+.brown-title {
+  margin-top: 70px;
+  margin-bottom: 20px;
+  color: #06ffff;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: "Goblin One";
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.ipa-title {
+  margin-top: 70px;
+  margin-bottom: 20px;
+  color: #dbff00;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: "Goblin One";
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 /* ====================================
 // base rules
 // ==================================== */
