--- a/src/scss/modules/_newsletter.scss
+++ b/src/scss/modules/_newsletter.scss
@@ -1,3 +1,21 @@
 .newsletter {
   background-image: url(/src/img/autre-siteweb/bar.png);
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  width: 473px;
+  padding: 10px 12px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 5px;
+}
+
+.newletter-title {
+  color: #fff;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: "Goblin One";
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
