PPRO-animation de l'oppacitée des bouteilles, petit souci avec le scss ne marche plus

--- a/src/scss/modules/_mini.scss
+++ b/src/scss/modules/_mini.scss
@@ -14,16 +14,19 @@
   width: 200px;
   margin-top: 140px;
   transition-duration: 0.3s;
+  cursor: pointer;
 }
 
 .mini-logo-pirate {
   width: 220px;
   margin-top: 140px;
   transition-duration: 0.3s;
+  cursor: pointer;
 }
 
 .mini-logo-kraken {
   width: 270px;
   margin-top: 140px;
   transition-duration: 0.3s;
+  cursor: pointer;
 }
