--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -69,6 +69,7 @@ nav {
   display: flex;
   justify-content: center;
   padding-top: 100px;
+  font-size: 30px;
   animation: alcool 2s ease infinite;
   color: linear-gradient(270deg, #dbff00, #06ffff, #df03f2);
 }
@@ -123,6 +124,19 @@ nav {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+strong {
+  color: #df03f2;
+}
+
+.text-invisible {
+  opacity: 1;
+  transition: 1s ease;
+}
+
+&.text-invisible {
+  opacity: 1;
 }
 
 /* ====================================
