--- a/src/scss/modules/_mini.scss
+++ b/src/scss/modules/_mini.scss
@@ -27,3 +27,19 @@
   margin-top: 140px;
   transition-duration: 0.3s;
 }
+
+.mini-instagrame {
+  width: 59px;
+  height: 59px;
+  flex-shrink: 0;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.mini-tiktok {
+  width: 143px;
+  height: 143px;
+  flex-shrink: 0;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
