--- a/src/scss/modules/_newsletter.scss
+++ b/src/scss/modules/_newsletter.scss
@@ -11,6 +11,8 @@
 }
 
 .newletter-title {
+  display: flex;
+  text-align: end;
   color: #fff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: "Goblin One";
