PPRO-changement couleur de la nav et mise en valeur du 33cl

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -53,13 +53,6 @@ footer {
   padding: 50px;
 }
 
-nav {
-  display: flex;
-  color: white;
-  justify-content: end;
-  justify-content: space-around;
-}
-
 .title {
   width: 25%;
   padding-left: 50px;
@@ -168,6 +161,25 @@ nav {
   font-weight: 400;
   line-height: normal;
 }
+
+.cl {
+  color: #000;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.cl-ipa {
+  color: #ffffff;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 /* ====================================
 // base rules
 // ==================================== */
