--- a/src/scss/modules/_beers.scss
+++ b/src/scss/modules/_beers.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 590px;
   margin-left: 280px;
-  margin-top: -530px;
+  margin-top: -550px;
   width: 605px;
   height: 619px;
   flex-shrink: 0;
@@ -18,7 +18,7 @@
   color: #000;
   font-family: Helvetica;
   font-size: 18px;
-  font-style: normal;
+  font-style: oblique;
   font-weight: 400;
   line-height: normal;
 }
@@ -38,7 +38,7 @@
   color: #ffffff;
   font-family: Helvetica;
   font-size: 18px;
-  font-style: normal;
+  font-style: oblique;
   font-weight: 400;
   line-height: normal;
 }
