--- a/src/scss/modules/_history.scss
+++ b/src/scss/modules/_history.scss
@@ -3,6 +3,11 @@
   justify-content: center;
   color: white;
   padding-top: 35px;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .history {
@@ -13,4 +18,9 @@
   color: white;
   padding-top: 20px;
   padding-bottom: 35px;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
