PPRO-ajustement de la newsletter

--- a/src/scss/modules/_history.scss
+++ b/src/scss/modules/_history.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   color: white;
   padding-top: 35px;
-  font-family: Helvetica;
+  font-family: "Goblin One";
   font-size: 18px;
   font-style: oblique;
   font-weight: 400;
