--- a/src/scss/modules/_newsletter.scss
+++ b/src/scss/modules/_newsletter.scss
@@ -1,18 +1,17 @@
 .newsletter {
-  background-image: url(/src/img/autre-siteweb/bar.png);
   display: flex;
   flex-direction: column;
-  background-repeat: no-repeat;
+
   width: 473px;
   padding: 10px 12px;
-  align-items: center;
-  gap: 10px;
+  margin-left: 340px;
+  margin-top: 140px;
+  gap: 30px;
   border-radius: 5px;
 }
 
 .newletter-title {
   display: flex;
-
   color: #fff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: "Goblin One";
@@ -20,4 +19,17 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-left: 70px;
+}
+
+input#newsletter-firstname {
+  padding: 4px;
+}
+
+input#newsletter-email {
+  padding: 4px;
+}
+
+input#newsletter-name {
+  padding: 4px;
 }
