--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -87,17 +87,6 @@ footer {
   border-radius: 5px;
   width: fit-content;
 }
-.blonde-title {
-  margin-top: 70px;
-  margin-bottom: 20px;
-  color: #df03f2;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: "Goblin One";
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
 
 .brown-title {
   margin-top: 70px;
@@ -160,6 +149,22 @@ footer {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.the-price {
+  display: flex;
+  flex-direction: column;
+  padding-left: 850px;
+}
+
+.btn-decrement {
+  background-color: #e0970d;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  fill: #e0970d;
+  border-radius: 6px;
 }
 
 /* ====================================
