--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,6 @@
 @import "modules/nav";
 @import "modules/cl";
 @import "modules/counter";
+@import "modules/blonde";
+@import "modules/brown";
+@import "modules/ipa";
