--- a/src/scss/modules/_counter.scss
+++ b/src/scss/modules/_counter.scss
@@ -2,11 +2,16 @@
   display: inline-flex;
   align-items: flex-start;
   gap: 10px;
-  padding-left: 980px;
-}
+  margin-left: 190px;
 
-.counter {
-  color: white;
-
-  margin: 0 15;
+  .counter {
+    color: rgb(0, 0, 0);
+    margin: 0 15;
+    color: #000;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 }
