--- a/src/scss/modules/_brown.scss
+++ b/src/scss/modules/_brown.scss
@@ -17,7 +17,7 @@
   line-height: normal;
 }
 .brown-title {
-  margin-top: 70px;
+  margin-top: 50px;
   margin-bottom: 20px;
   color: #06ffff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -26,4 +26,13 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+.brown-btn-decrement {
+  background-color: #c04427;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  fill: #c04427;
+  border-radius: 6px;
 }
