--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -88,30 +88,6 @@ footer {
   width: fit-content;
 }
 
-.brown-title {
-  margin-top: 70px;
-  margin-bottom: 20px;
-  color: #06ffff;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: "Goblin One";
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.ipa-title {
-  margin-top: 70px;
-  margin-bottom: 20px;
-  color: #dbff00;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: "Goblin One";
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
 .text-invisible {
   opacity: 0;
   transition: 1.2s ease;
@@ -157,16 +133,10 @@ footer {
   padding-left: 850px;
 }
 
-.btn-decrement {
-  background-color: #e0970d;
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-bottom: 4px;
-  padding-top: 4px;
-  fill: #e0970d;
-  border-radius: 6px;
+.little-informations {
+  display: flex;
+  justify-content: space-between;
 }
-
 /* ====================================
 // base rules
 // ==================================== */
