--- a/src/scss/modules/_beers.scss
+++ b/src/scss/modules/_beers.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 590px;
   margin-left: 280px;
-  margin-top: -480px;
+  margin-top: -490px;
   width: 605px;
   height: 619px;
   flex-shrink: 0;
@@ -10,7 +10,18 @@
 
 .beers-information {
   margin-bottom: 10px;
-  margin-top: -260px;
+  margin-top: -240px;
+  color: #000;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.brown-beers-information {
+  margin-bottom: 10px;
+  margin-top: -140px;
   color: #000;
   font-family: Helvetica;
   font-size: 18px;
@@ -20,7 +31,7 @@
 }
 
 .beers-ingredients {
-  padding-top: 150px;
+  padding-top: 190px;
   color: #000;
   font-family: Helvetica;
   font-size: 18px;
@@ -30,7 +41,7 @@
 }
 
 .beers-information-ipa {
-  margin-bottom: 30px;
+  margin-top: -150px;
   color: #ffffff;
   font-family: Helvetica;
   font-size: 18px;
@@ -40,7 +51,7 @@
 }
 
 .beers-ingredients-ipa {
-  padding-top: 150px;
+  margin-top: 120px;
   color: #ffffff;
   font-family: Helvetica;
   font-size: 18px;
