--- a/src/scss/modules/_ipa.scss
+++ b/src/scss/modules/_ipa.scss
@@ -23,7 +23,7 @@
 }
 
 .ipa-title {
-  margin-top: 70px;
+  margin-top: 50px;
   margin-bottom: 20px;
   color: #dbff00;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -32,4 +32,14 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.ipa-btn-decrement {
+  background-color: #6f00a4;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  fill: #6f00a4;
+  border-radius: 6px;
 }
