--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -37,12 +37,15 @@ nav {
 
 .nav-first-newsletter:hover {
   color: #f4aa1f;
+  text-decoration: underline;
 }
 
 .nav-first-conexion:hover {
   color: #d75b3e;
+  text-decoration: underline;
 }
 
 .nav-first-shop:hover {
   color: #7e06b7;
+  text-decoration: underline;
 }
