PPRO-ajustement des position des informations des bières et des bouttons

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -49,7 +49,7 @@ header {
 }
 
 footer {
-  margin-top: 290px;
+  margin-top: 180px;
   padding: 50px;
 }
 
@@ -133,7 +133,7 @@ footer {
   padding-left: 850px;
 }
 
-.little-informations {
+.litle-informations {
   display: flex;
   justify-content: space-between;
 }
