--- a/src/scss/modules/_blonde.scss
+++ b/src/scss/modules/_blonde.scss
@@ -8,7 +8,7 @@
 }
 
 .blonde-title {
-  margin-top: 70px;
+  margin-top: 100px;
   margin-bottom: 20px;
   color: #df03f2;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -17,7 +17,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  scroll-behavior: smooth;
 }
 
 .blonde-the-price {
@@ -39,4 +38,34 @@
   padding-top: 4px;
   fill: #e0970d;
   border-radius: 6px;
+}
+
+.blonde-beers-information {
+  margin-bottom: 10px;
+  margin-top: -230px;
+  color: #000;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.blonde-beers-ingredients {
+  padding-top: 100px;
+  color: #000;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.blonde-beers-bottle {
+  display: flex;
+  margin-left: 280px;
+  margin-top: -455px;
+  width: 605px;
+  height: 619px;
+  flex-shrink: 0;
 }
