--- a/src/scss/modules/_ipa.scss
+++ b/src/scss/modules/_ipa.scss
@@ -9,7 +9,7 @@
 }
 
 .ipa-price {
-  color: #000;
+  color: #ffffff;
   font-family: Helvetica;
   font-size: 18px;
   font-style: normal;
@@ -42,4 +42,34 @@
   padding-top: 4px;
   fill: #6f00a4;
   border-radius: 6px;
+}
+
+.ipa-beers-bottle {
+  display: flex;
+  margin-left: 280px;
+  margin-top: -470px;
+  width: 605px;
+  height: 619px;
+  flex-shrink: 0;
+}
+
+.ipa-beers-information {
+  margin-bottom: 10px;
+  margin-top: -170px;
+  color: #ffffff;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: oblique;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.ipa-beers-ingredients {
+  margin-top: 120px;
+  color: #ffffff;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
