PPRO-modifications des fond de bières

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -138,6 +138,10 @@ footer {
   justify-content: space-between;
 }
 
+.background-secret {
+  background-color: #00072c;
+  padding: 30px;
+}
 /* ====================================
 // base rules
 // ==================================== */
