--- a/src/scss/modules/_mini.scss
+++ b/src/scss/modules/_mini.scss
@@ -36,10 +36,18 @@
   margin-bottom: 40px;
 }
 
+.mini-instagrame:hover {
+  transform: scale(1.15);
+}
+
 .mini-tiktok {
   width: 143px;
   height: 143px;
   flex-shrink: 0;
   margin-top: 20px;
   margin-bottom: 40px;
+}
+
+.mini-tiktok:hover {
+  transform: scale(1.15);
 }
