PPRO-dernier ajustement les lien _TERMINER

--- a/src/scss/modules/_mini.scss
+++ b/src/scss/modules/_mini.scss
@@ -38,6 +38,7 @@
 
 .mini-instagrame:hover {
   transform: scale(1.15);
+  cursor: pointer;
 }
 
 .mini-tiktok {
@@ -50,4 +51,5 @@
 
 .mini-tiktok:hover {
   transform: scale(1.15);
+  cursor: pointer;
 }
