--- a/src/scss/modules/_brown.scss
+++ b/src/scss/modules/_brown.scss
@@ -51,8 +51,18 @@
 .brown-beers-bottle {
   display: flex;
   margin-left: 280px;
-  margin-top: -380px;
+  margin-top: -480px;
   width: 605px;
   height: 619px;
   flex-shrink: 0;
+}
+
+.brown-beers-ingredients {
+  padding-top: 100px;
+  color: #000;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
