PPRO-ajustement des bouton_TERMINER

--- a/src/scss/modules/_button.scss
+++ b/src/scss/modules/_button.scss
@@ -33,6 +33,12 @@
   cursor: pointer;
 }
 
+.button-blonde,
+.button-ipa,
+.button-brown {
+  position: absolute;
+}
+
 .button-shop {
   color: #000;
   border-radius: 13px;
