--- a/src/scss/modules/_blonde.scss
+++ b/src/scss/modules/_blonde.scss
@@ -8,7 +8,7 @@
 }
 
 .blonde-title {
-  margin-top: 100px;
+  margin-top: 150px;
   margin-bottom: 20px;
   color: #df03f2;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -68,4 +68,5 @@
   width: 605px;
   height: 619px;
   flex-shrink: 0;
+  margin-bottom: -150px;
 }
