--- a/src/scss/modules/_brown.scss
+++ b/src/scss/modules/_brown.scss
@@ -17,7 +17,7 @@
   line-height: normal;
 }
 .brown-title {
-  margin-top: 50px;
+  margin-top: 120px;
   margin-bottom: 20px;
   color: #06ffff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -51,7 +51,8 @@
 .brown-beers-bottle {
   display: flex;
   margin-left: 280px;
-  margin-top: -480px;
+  margin-top: -460px;
+  margin-bottom: -150px;
   width: 605px;
   height: 619px;
   flex-shrink: 0;
